tests/NormalTests/paczka1/small_fuzzy/90541040.err
Error in line 1: A938 A589 76,2
Error in line 5: Th3PNl35 S26 6,6
Error in line 7: 5U8yljD1FN A589 83,48
Error in line 10: HN1T7u A589 34,3
